# gym-tracker

./: .gitignore  404.html  firestore.rules  index.html  main.py  pyproject.toml
assets/: index-BUgVkAOZ.js  index-Cw3lttXV.css  index-Dvlfeudi.js  index-Yx_dJkNU.js  index-gJDp2Fvq.js
backend/: .env.example  auth.py  config.py  main.py
backend/models/: __init__.py  body_metrics.py  exercise.py  routine.py  session.py  user.py
backend/routers/: __init__.py  body_metrics.py  exercises.py  routines.py  sessions.py
backend/services/: __init__.py  firestore.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/scripts/: copy-404.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Layout.css  Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.css  DashboardPage.tsx  ExercisesPage.css  ExercisesPage.tsx  HistoryPage.css  HistoryPage.tsx  LoginPage.css  LoginPage.tsx  ProfilePage.css  ProfilePage.tsx  RoutinesPage.css  RoutinesPage.tsx  WorkoutPage.css  WorkoutPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
